<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/escolha_jogada_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/pedraIb"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:scaleType="fitCenter"
                android:gravity="center"
                android:layout_weight="1"
                android:src="@mipmap/pedra" />

            <ImageButton
                android:id="@+id/papelIb"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:scaleType="fitCenter"
                android:gravity="center"
                android:layout_weight="1"
                android:src="@mipmap/papel" />

            <ImageButton
                android:id="@+id/tesouraIb"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:scaleType="fitCenter"
                android:gravity="center"
                android:layout_weight="1"
                android:src="@mipmap/tesoura" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultadoLl"
            android:visibility="visible"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jogada_label" />

            <TextView
                android:id="@+id/jogadaTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jogada_computador1_label" />

            <TextView
                android:id="@+id/jogadaComputador1Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/computador2Tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jogada_computador2_label" />

            <TextView
                android:id="@+id/jogadaComputador2Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/resultadoTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>